add listing of jobs
